--- a/src/blocks/svg/svg.pug
+++ b/src/blocks/svg/svg.pug
@@ -1,6 +1,7 @@
 //- Все примеси в этом файле должны начинаться c имени блока (svg)
 
 mixin svg(icon='', classes, sizes={width:'30',height:'30'},mods,inline=false)
+  //- +svg('warning','',{width:45,height:43})(class='article__note-icon fill-slate-400')
 
   -
     // список модификаторов
