--- a/src/pages/addClasses.pug
+++ b/src/pages/addClasses.pug
@@ -1,19 +1,56 @@
 .opacity-100
 <div class='!opacity-100 lg_!hidden !text-black !hidden !container !transform !transition !object-contain'></div>
-<div class='w-[50%] w-[55%] w-[60%] w-[65%] w-[70%] w-[75%] w-[80%] w-[85%] w-[90%]'></div>
+<div class='w-[150%] w-[55%] w-[60%] w-[65%] w-[70%] w-[75%] w-[80%] w-[85%] w-[90%] basis-1/2'></div>
+<div class='basis-1/2'/>
+.md_flex
+.md_flex-wrap
+.md_flex-nowrap
+.lg_flex
+.lg_flex-wrap
+.md_flex-nowrap
+.xl_flex
+.xl_flex-wrap
+.xl_flex-nowrap
+.xxl_flex
+.xxl_flex-wrap
+.xxl_flex-nowrap
+.w-150px
 .w-200px
+.w-250px
 .w-300px
 .w-400px
 .w-500px
 .w-600px
+.lg_w-150px
+.lg_w-200px
+.lg_w-250px
+.lg_w-300px
+.lg_w-400px
+.lg_w-500px
+.lg_w-600px
+.xl_w-150px
+.xl_w-200px
+.xl_w-250px
+.xl_w-300px
+.xl_w-400px
+.xl_w-500px
+.xl_w-600px
+.xxl_w-150px
+.xxl_w-200px
+.xxl_w-250px
+.xxl_w-300px
+.xxl_w-400px
+.xxl_w-500px
+.xxl_w-600px
 .grid-cols-2-300px
+.gap-15px
 .gap-20px
+.gap-30px
 .uppercase
 .self-start
 .justify-self-end
 .h-150px
 .h-200px
-.h-250px
 .h-300px
 .h-350px
 .h-400px
@@ -23,7 +60,13 @@
 .lg_h-300px
 .lg_h-350px
 .lg_h-400px
+.xl_h-200px
+.xl_h-250px
+.xl_h-300px
+.xl_h-350px
+.xl_h-400px
 .object-contain
 .visible
 .contents
+.grow-0
 
