--- a/src/pages/article-lib.pug
+++ b/src/pages/article-lib.pug
@@ -602,6 +602,57 @@ block content
             code   &lt;p>Лечение суставов с применением лазера – это методика, в основе которой лежит действие на ткани концентрированным пучком световой энергии. Воздействие им оказывают на ограниченный участок тела. Лазерное лечение практикуется как основная терапия,&lt;/p>
             code   &lt;p>Лечение суставов с применением лазера – это методика, в основе которой лежит действие на ткани концентрированным пучком световой энергии. Воздействие им оказывают на ограниченный участок тела. Лазерное лечение практикуется как основная терапия, а также совместно с другими методиками.&lt;/p>
             code &lt;/div>
+          <div class="border border-black border-dashed rounded-10px flex flex-col p-30px mt-30px mb-30px lg_block xl_p-40px">
+            <div class="article__img img-cover lg_h-200px lg_ml-32px lg_float-right"><img class="lazyload" data-src="https://rikta.ru/images/health/diseases/akne/istockphoto-1407697825-612x612.jpg"></div>
+            <p class="text-black text-lg lg_text-2xl col-start-1 col-span-1 -order-1"> Лечебное воздействие на акне при помощи лазерного воздействия имеет следующие преимущества:
+            </p>
+            <ul class="pl-0 mb-0 lg_pl-15px row-start-2 row-span-2">
+              <li>происходит зональная обработка поврежденных участков кожи;</li>
+              <li>когда проводят процедуру, сохраняется целостность кожного покрова;</li>
+              <li>низкая вероятность возникновения побочных реакций.</li>
+            </ul>
+            <p class="col-start-1 col-span-1"> В отличие от других методов лечения акне, лазеротерапия аппаратами РИКТА обычно не вызывает боль или дискомфорт. Результат лечебного воздействия сохраняется в течение длительного времени.
+            </p>
+          </div>
+          .code
+            code  &lt;div class="border border-black border-dashed rounded-10px flex flex-col p-30px mt-30px mb-30px lg_block xl_p-40px">
+            code    &lt;div class="article__img img-cover lg_h-200px lg_ml-32px lg_float-right">
+            code      &lt;img class="lazyload" data-src="https://rikta.ru/images/health/diseases/akne/istockphoto-1407697825-612x612.jpg">
+            code    &lt;/div>
+            code    &lt;p class="text-black text-lg lg_text-2xl col-start-1 col-span-1 -order-1"> Лечебное воздействие на акне при помощи лазерного воздействия имеет следующие преимущества:&lt;/p>
+            code    &lt;ul class="pl-0 mb-0 lg_pl-15px row-start-2 row-span-2">
+            code      &lt;li>происходит зональная обработка поврежденных участков кожи;code &lt;/li>
+            code      &lt;li>когда проводят процедуру, сохраняется целостность кожного покрова;code &lt;/li>
+            code      &lt;li>низкая вероятность возникновения побочных реакций.code &lt;/li>
+            code    &lt;/ul>
+            code    &lt;p class="col-start-1 col-span-1"> В отличие от других методов лечения акне, лазеротерапия аппаратами РИКТА обычно не вызывает боль или дискомфорт. Результат лечебного воздействия сохраняется в течение длительного времени.&lt;/p>
+            code  &lt;/div>
+          <div class="border border-black border-dashed rounded-10px flex flex-col p-30px mt-30px mb-30px xl_block xl_p-40px">
+            <div class="article__img img-cover xl_h-300px xl_ml-32px xl_float-right"><img class="lazyload" data-src="https://rikta.ru/images/health/diseases/akne/istockphoto-1407697825-612x612.jpg"></div>
+            <p class="text-black text-lg lg_text-2xl col-start-1 col-span-1 -order-1"> Лечебное воздействие на акне при помощи лазерного воздействия имеет следующие преимущества:
+            </p>
+            <ul class="pl-0 mb-0 lg_pl-15px row-start-2 row-span-2">
+              <li>происходит зональная обработка поврежденных участков кожи;</li>
+              <li>когда проводят процедуру, сохраняется целостность кожного покрова;</li>
+              <li>низкая вероятность возникновения побочных реакций.</li>
+            </ul>
+            <p class="col-start-1 col-span-1"> В отличие от других методов лечения акне, лазеротерапия аппаратами РИКТА обычно не вызывает боль или дискомфорт. Результат лечебного воздействия сохраняется в течение длительного времени.
+            </p>
+          </div>
+          .code
+            code  &lt;div class="border border-black border-dashed rounded-10px flex flex-col p-30px mt-30px mb-30px xl_block xl_p-40px">
+            code    &lt;div class="article__img img-cover xl_h-300px xl_ml-32px xl_float-right">
+            code      &lt;img class="lazyload" data-src="https://rikta.ru/images/health/diseases/akne/istockphoto-1407697825-612x612.jpg">
+            code    &lt;/div>
+            code    &lt;p class="text-black text-lg lg_text-2xl col-start-1 col-span-1 -order-1"> Лечебное воздействие на акне при помощи лазерного воздействия имеет следующие преимущества:&lt;/p>
+            code    &lt;ul class="pl-0 mb-0 lg_pl-15px row-start-2 row-span-2">
+            code      &lt;li>происходит зональная обработка поврежденных участков кожи;code &lt;/li>
+            code      &lt;li>когда проводят процедуру, сохраняется целостность кожного покрова;code &lt;/li>
+            code      &lt;li>низкая вероятность возникновения побочных реакций.code &lt;/li>
+            code    &lt;/ul>
+            code    &lt;p class="col-start-1 col-span-1"> В отличие от других методов лечения акне, лазеротерапия аппаратами РИКТА обычно не вызывает боль или дискомфорт. Результат лечебного воздействия сохраняется в течение длительного времени.&lt;/p>
+            code  &lt;/div>
+
           table.article-table
             thead
               tr
@@ -781,6 +832,10 @@ block content
             code        &lt;/div>
             code      &lt;/div>
             code    &lt;/div>
+            code  &lt;/div>
+          .code
+            code  &lt;div class="lg_mb-64px lg_mt-60px">
+            code    #PRODUCTS_START#1064,23528,49379#PRODUCTS_END#
             code  &lt;/div>
 
         .article__aside.hidden.lg_block.lg_col-start-3.lg_row-span-10.row-start-2
