--- a/src/pages/article.pug
+++ b/src/pages/article.pug
@@ -707,6 +707,34 @@ block content
                 text: 'Врач кардиолог',
                 phone: '8 800 200 57 30'
               })(class='article__consult')
+              .article__aside-info
+                .add-info
+                  h2.add-info__title Материалы по теме
+                  +download-link({
+                    title: "Метотрексат в лечении ревматоидного артрита и псориатического артрита",
+                    authors: "Чичасова Н.В., Лила А.М.",
+                    source: "Лечащий врач. 2020. № 7. С. 42-51."
+                  })
+                  +download-link({
+                    title: "Метотрексат в лечении ревматоидного артрита и псориатического артрита",
+                    authors: "Чичасова Н.В., Лила А.М.",
+                    source: "Лечащий врач. 2020. № 7. С. 42-51."
+                  })
+                  +download-link({
+                    title: "Метотрексат в лечении ревматоидного артрита и псориатического артрита",
+                    authors: "Чичасова Н.В., Лила А.М.",
+                    source: "Лечащий врач. 2020. № 7. С. 42-51."
+                  })
+                  +download-link({
+                    title: "Метотрексат в лечении ревматоидного артрита и псориатического артрита",
+                    authors: "Чичасова Н.В., Лила А.М.",
+                    source: "Лечащий врач. 2020. № 7. С. 42-51."
+                  })
+                  +download-link({
+                    title: "Метотрексат в лечении ревматоидного артрита и псориатического артрита",
+                    authors: "Чичасова Н.В., Лила А.М.",
+                    source: "Лечащий врач. 2020. № 7. С. 42-51."
+                  })
 
         .article__socials.lg_justify-self-start
           .text-lg.text-black.text-center.mb-7px Поделиться в соц. сетях
