doctor.html, doctors.html

--- a/src/blocks/btn/btn.pug
+++ b/src/blocks/btn/btn.pug
@@ -1,4 +1,4 @@
-//- Все примеси в этом файле должны начинаться c имени блока (btn)
+s//- Все примеси в этом файле должны начинаться c имени блока (btn)
 
 mixin btn(text, mods, isInput)
 
