--- a/src/scss/test.scss
+++ b/src/scss/test.scss
@@ -1,3 +1,57 @@
+// // //all
+
+// html * {
+//   color: red !important;
+//   border-color: red !important;
+//   background-color: transparent !important;
+// }
+
+// button {
+//   outline: 1px solid red !important;
+// }
+
+// .page-header {
+//   border-color: red !important;
+//   background-color: transparent !important;
+// }
+
+// input,
+// select {
+//   background-color: transparent !important;
+// }
+
+// //   /// /// Врачи
+// .info-card__image {
+//   outline: 1px solid red;
+//   img {
+//     opacity: 0;
+//   }
+// }
+
+// .info-card__text {
+//   letter-spacing: -0.1px;
+// }
+
+// .info-card {
+//   outline: 1px solid red;
+// }
+
+// .info-card__video-btn {
+//   outline: 1px solid red;
+// }
+
+// .info-card__add {
+//   outline: 1px solid red;
+// }
+
+// .info-card__outer {
+//   outline: 1px solid red;
+// }
+
+// .add-info {
+//   outline: 1px solid red;
+// }
+
 // .article-preview__list-wrapper #tns1-mw {
 //   outline: 1px solid red;
 // }
@@ -26,23 +80,7 @@
 // .btn--simple {
 //   margin-bottom: 0 !important;
 // }
-// // //all
 
-// html * {
-//   color: red !important;
-//   border-color: red !important;
-//   background-color: transparent !important;
-// }
-
-// .page-header {
-//   border-color: red !important;
-//   background-color: transparent !important;
-// }
-
-// input,
-// select {
-//   background-color: transparent !important;
-// }
 
 // .order-payment__img {
 //   outline: 1px solid red;
