--- a/src/blocks/add-info/add-info.scss
+++ b/src/blocks/add-info/add-info.scss
@@ -20,9 +20,36 @@
     padding: 30px;
   }
 
+  &__list {
+    margin-top: 20px;
+    margin-bottom: 0;
+    padding-left: 0;
+  }
+
+  &__item {
+    margin-bottom: 15px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
   &__title {
     margin: 0;
     @apply text-2xl;
+  }
+
+  &__subtitle {
+    font-size: 16px;
+    line-height: 22px;
+    font-weight: 700;
+    color: $tw-blue_link;
+  }
+
+  &__text {
+    margin-top: 4px;
+    padding-bottom: 5px;
+    font-size: 16px;
   }
 
 }
