--- a/src/blocks/banner/banner.scss
+++ b/src/blocks/banner/banner.scss
@@ -12,5 +12,10 @@
   &__wrapper {
     margin-top: 30px;
     margin-bottom: 60px;
+
+    .article--doctors & {
+      margin-top: 0;
+      margin-bottom: 0;
+    }
   }
 }
