--- a/src/blocks/info-card/info-card.scss
+++ b/src/blocks/info-card/info-card.scss
@@ -5,4 +5,389 @@
 .info-card {
 
   $block-name:                &; // #{$block-name}__element
+
+  padding: 30px;
+  border-radius: 4px;
+  background-color: $tw-white;
+  @apply shadow-default;
+  margin-bottom: 20px;
+
+  @media (min-width: $screen-md) {
+    padding: 0;
+  }
+
+  @media (min-width: $screen-xxl) {
+    margin-bottom: 40px;
+  }
+
+  &--doctor {
+    margin-top: 30px;
+    margin-bottom: 40px;
+
+    @media (min-width: $screen-md) {
+      padding: 30px;
+    }
+
+    @media (min-width: $screen-lg) {
+      margin-top: 10px;
+    }
+
+    @media (min-width: $screen-xxl) {
+      display: flex;
+    }
+  }
+
+  &__outer {
+    margin-top: 40px;
+    margin-bottom: 60px;
+    padding: 30px;
+    border-radius: 4px;
+    background-color: $tw-white;
+    @apply shadow-default;
+
+    h2 {
+      margin-top: 0;
+    }
+
+    @media (min-width: $screen-lg) {
+      margin-bottom: 0;
+    }
+  }
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+
+  &__inner {
+    position: relative;
+
+    @media (min-width: $screen-md) {
+      display: grid;
+      padding: 30px;
+      grid-template-columns: auto 1fr 1fr;
+      grid-template-rows: auto auto auto;
+      grid-gap: 0 30px;
+    }
+
+    @media (min-width: $screen-lg) {
+      grid-gap: 0 20px;
+    }
+
+    @media (min-width: $screen-xl) {
+      grid-gap: 0 30px;
+    }
+
+    @media (min-width: $screen-xxl) {
+      padding: 40px;
+      grid-gap: 0;
+    }
+
+    @media (min-width: $screen-3xl) {
+      grid-template-columns: auto 1fr auto;
+    }
+
+    #{$block-name}--doctor & {
+      @media (min-width: $screen-md) {
+        display: block;
+        padding: 0;
+      }
+
+      @media (min-width: $screen-xxl) {
+        margin-right: 40px;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+      }
+    }
+  }
+
+  &__image-wrapper {
+    position: relative;
+    width: 260px;
+    height: 240px;
+
+    @media (min-width: $screen-md) {
+      grid-row-start: 1;
+      grid-row-end: 3;
+      margin-bottom: 15px;
+    }
+
+    @media (min-width: $screen-xxl) {
+      grid-row-end: 4;
+      width: 240px;
+      height: 240px;
+      margin-bottom: 0;
+      margin-right: 40px;
+    }
+
+    #{$block-name}--doctor & {
+
+      @media (min-width: $screen-xxl) {
+        margin-right: 0;
+      }
+    }
+  }
+
+  &__image {
+    width: 100%;
+    height: 100%;
+    line-height: 0;
+    border-radius: 10px;
+    overflow: hidden;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+
+  &__video-btn {
+    position: absolute;
+    top: -5px;
+    right: -5px;
+    width: 48px;
+    height: 48px;
+    background-color: $tw-blue_link;
+    border-radius: 50%;
+    cursor: pointer;
+
+    svg {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
+
+  &__title {
+    display: block;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    font-size: 20px;
+    line-height: 24px;
+    color: $tw-blue_link;
+
+    @media (min-width: $screen-md) {
+      font-size: 24px;
+      line-height: 34px;
+    }
+
+    @media (min-width: $screen-xxl) {
+      margin-top: 0;
+    }
+
+    @at-root a#{&} {
+      font-weight: 400;
+
+      @media (min-width: $screen-md) {
+         font-weight:400;
+         grid-row-start: 1;
+         grid-row-end: 2;
+         grid-column-start: 2;
+         grid-column-end: 4;
+      }
+    }
+
+
+  }
+
+  &__text {
+    @apply text-base;
+    color: $tw-gray-500;
+    margin-bottom: 20px;
+
+    @media (min-width: $screen-md) {
+        font-size:16px;
+        line-height:26px;
+        color:#686868;
+        margin-bottom:20px;
+        grid-row-start: 2;
+        grid-row-end: 3;
+        grid-column-start: 2;
+        grid-column-end: 4;
+    }
+  }
+
+  &__btn-link {
+    width: 100%;
+    font-size: 16px;
+    border: 1px solid $tw-gray-500;
+    align-self: end;
+
+    @media (min-width: $screen-md) {
+      grid-row-start: 3;
+      grid-row-end: 4;
+      grid-column-start: 1;
+      grid-column-end: 2;
+      margin-bottom: 0;
+    }
+
+    @media (min-width: $screen-xxl) {
+      grid-column-start: 2;
+      grid-column-end: 3;
+      width: 291px;
+      margin-right: 32px;
+    }
+
+    @media (min-width: $screen-3xl) {
+      justify-self: end;
+    }
+  }
+
+  &__btn-review {
+    width: 100%;
+    margin-top: 20px;
+    justify-content: center;
+    padding: 10px 18px;
+    font-size: 16px;
+    align-self: end;
+
+    @media (min-width: $screen-md) {
+      grid-row-start: 3;
+      grid-row-end: 4;
+      grid-column-start: 2;
+      grid-column-end: 3;
+      margin-top: 0;
+    }
+
+    @media (min-width: $screen-lg) {
+      grid-column-end: 4;
+      justify-self: start;
+      width: auto;
+    }
+
+    @media (min-width: $screen-xxl) {
+      grid-column-start: 3;
+      grid-column-end: 4;
+      width: 181px;
+      justify-self: end;
+    }
+
+    #{$block-name}--doctor & {
+
+      @media (min-width: $screen-lg) {
+        width: 260px;
+      }
+
+       @media (min-width: $screen-xxl) {
+        width: auto;
+        margin-top: 10px;
+        align-self: stretch;
+       }
+    }
+  }
+
+  &__plate-top {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 2px 10px;
+    color: $tw-white;
+    font-weight: 700;
+    background-color: $tw-blue_link;
+    @apply text-sm;
+    border-radius: 4px 0px;
+
+    @media (min-width: $screen-md) {
+      left: auto;
+      right: 0;
+      border-radius: 0px 4px;
+    }
+  }
+
+  &__plate-bottom {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    padding: 2px 8px;
+    font-size: 14px;
+    line-height: 26px;
+    background-color: $tw-white;
+    border-radius: 4px;
+  }
+
+  &__main {
+    margin-top: 40px;
+
+    #{$block-name}--doctor & {
+
+      @media (min-width: $screen-xxl) {
+        margin-top: 0;
+        padding: 0;
+      }
+    }
+  }
+
+  &__lead {
+    @apply text-xl;
+    color: $tw-black;
+
+    @media (min-width: $screen-xxl) {
+      @apply text-2xl;
+    }
+  }
+
+  &__fragment {
+    margin-top: 20px;
+    padding-left: 26px !important;
+    @apply text-base;
+    border-left: 1px solid $tw-gray-200;
+  }
+
+  &__textplate {
+    padding: 10px 30px 10px 20px;
+    color: $tw-black;
+    background-color: #F2F8FD;
+  }
+
+  &__add {
+    border-radius: 4px;
+    background-color: $tw-white;
+    @apply shadow-default;
+  }
+
+  &__add-inner {
+    padding: 30px;
+
+    ul {
+      margin-top: 20px !important;
+      padding-left: 16px;
+      list-style: none;
+
+      &.li_mb-lg {
+        li {
+          margin-bottom: 18px !important;
+
+          &:last-child {
+            margin-bottom: 0 !important;
+          }
+        }
+      }
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+
+    li {
+      position: relative;
+      margin-bottom: 8px !important;
+      padding-left: 14px !important;
+      font-size: 16px;
+      line-height: 22px !important;
+
+      &::before {
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 0.6em;
+        width: 4px;
+        height: 4px;
+        border-radius: 50%;
+        background-color: $tw-green-500;
+      }
+    }
+  }
+
 }
